nieuzywane/lic.txt
[eval]:1
const {PrismaClient}=require(@prisma/client);const p=new PrismaClient();p.license.findFirst().then(r=>console.log(JSON.stringify(r))).catch(e=>console.error(e))
                             ^

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.0
